docs/v0.3.0a134/_sources/reference/_autosummary/matflow.ElementSet.rst.txt
matflow.ElementSet
==================

.. currentmodule:: matflow

.. autoclass:: ElementSet
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ElementSet.ensure_element_sets
      ~ElementSet.from_json_like
      ~ElementSet.get_defined_parameter_types
      ~ElementSet.get_defined_sub_parameter_types
      ~ElementSet.get_locally_defined_inputs
      ~ElementSet.get_sequence_from_path
      ~ElementSet.get_task_dependencies
      ~ElementSet.is_input_type_provided
      ~ElementSet.prepare_persistent_copy
      ~ElementSet.to_dict
      ~ElementSet.to_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ElementSet.app
      ~ElementSet.defined_input_types
      ~ElementSet.elem_iter_IDs
      ~ElementSet.element_iterations
      ~ElementSet.element_local_idx_range
      ~ElementSet.elements
      ~ElementSet.index
      ~ElementSet.input_types
      ~ElementSet.task
      ~ElementSet.task_template
      ~ElementSet.undefined_input_types
      ~ElementSet.inputs
      ~ElementSet.input_files
      ~ElementSet.repeats
      ~ElementSet.groups
      ~ElementSet.resources
      ~ElementSet.sequences
      ~ElementSet.input_sources
      ~ElementSet.nesting_order
      ~ElementSet.env_preset
      ~ElementSet.environments
      ~ElementSet.sourceable_elem_iters
      ~ElementSet.allow_non_coincident_task_sources
      ~ElementSet.merge_envs
   
   